--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body {
-    font-family: sans-serif;
-}
 
 
 a{
@@ -30,7 +27,8 @@ h1{
 }
 
 .social{
-    opacity:0.4
+    opacity:0.4;
+    margin-top:30px;
 }
 
 .social:hover{
@@ -55,14 +53,7 @@ p{
 body {
     font-family: sans-serif;
 }
-.social{
-    opacity:0.4
-}
 
-.social:hover{
-    opacity:1;
-    box-shadow:0px 5px 10px 0 black;
-}
 
 li{
     font-family:monospace;
